2004-07-01  Richard Hult  <richard@imendio.com>

	* src/planner-gantt-*.c: Clean up a bit.

2004-07-01  Richard Hult  <richard@imendio.com>

	* src/planner-resource-view.c (resource_view_insert_resource_cb):
	Don't enter editable mode for inserted rows, we need undo
	transactions first.

2004-06-30  Richard Hult  <richard@imendio.com>

	* Makefile.am:
	* configure.in:
	* examples/sample-1.planner:  Dist the examples.

	* data/ui/xml-planner-plugin.ui: Fix string.

	* docs/user-guide/C/planner.xml: Make the man version the same as
	the app version, looks silly otherwise.
	
	* libplanner/mrp-parser.c: (mrp_parser_save):
	* libplanner/mrp-project.c: (mrp_project_save_as):
	* src/planner-application.c: (application_init):
	* src/planner-window.c: (window_do_save_as), (planner_window_open):
	* src/planner-xml-planner-plugin.c: (xml_planner_plugin_export):
	Fix up filename extensions and mime types.

	* planner.spec.in: Get this baby working.
	
2004-06-30 Alvaro del Castillo  <acs@barrapunto.com>

	* configure.in
	* data/Makefile.am
	* data/sql/Makefile.am
	* data/sql/database-0.11.sql
	* data/sql/database.sql
	* data/sql/upgrade-0.6.x-0.11.sql
	Install sql schema files in the system

2004-06-29  Setul Patel   <setulkumarpatel@yahoo.com>

	* Add G_GNUC_CONST to all _get_type functions.
	
2004-06-26 Alvaro del Castillo  <acs@barrapunto.com>
	
	* libplanner/mrp-object.c: Fix in mrp_object_get_property API doc.
	* src/planner-property-dialog.c: Implemented recovering properties
	values for tasks and resources when you undo a remove custom
	property operation. Fixes #143609.

2004-06-25  Richard Hult  <richard@imendio.com>

	* src/planner-ttable-row.c: (recalc_bounds),
	(ttable_row_resource_notify_cb),
	(ttable_row_assignment_notify_cb): Don't redraw unless the
	geometry is changed.

2004-06-25  Richard Hult  <richard@imendio.com>

	* src/planner-ttable-*.[ch]: Indent this so it at least remotely
	looks like the rest of the planner code. Sigh.  Do some of the